plugins/FileUpload/css/fileupload.css
#DiscussionForm ul.PostOptions {
   margin-bottom: 0px;
}

body #DiscussionForm form.FileUpload {
   background: transparent;
   border: 0px;
   margin: 0px;
   padding: 0px;
}

div.AttachFileWrapper {
   margin-bottom: 2px;
   padding: 5px;
   text-align: left;
}

input.HiddenFileInput {
   position: absolute;
}

input.HiddenFileInput:hover {
   cursor: pointer;
}

div.AttachFileWrapper table.AttachFileContainer {
   border-collapse: collapse;
   border: none;
}

div.AttachFileWrapper table.AttachFileContainer tr.FileAttachment {
   
}
div.AttachFileWrapper table.AttachFileContainer tr.FileAttachment td {
   padding: 3px;
   vertical-align: middle;
}

div.AttachFileWrapper table.AttachFileContainer tr.FileAttachment td div.ProgressBar {
   width: 126px;
   border: 2px solid gray;
   background-color: lightgrey;
   height: 14px;
   background: transparent url('../images/progress_base.gif') no-repeat center left;
   border: 0px;
}

div.AttachFileWrapper table.AttachFileContainer tr.FileAttachment td div.ProgressBar div.ProgressTicker {
   height: 100%;
   background-color: lime;
   background: transparent url('../images/progress_active.gif') no-repeat center left;
   line-height: 14px;
   font-size: 10px;
   color: #444444;
   padding-right: 2px;
   text-align: right;
}

div.AttachFileWrapper div.AttachFileLink {
   position: relative;
}

div.AttachFileWrapper div.AttachFileLink div#CurrentUploader {
   height: 0px;
}

div.AttachFileWrapper div.AttachFileLink div#CurrentUploader {
   width: 350px;
}

div.AttachFileWrapper div.NewAttachment {
   float: left;
   width: 350px;
   background-color: white;
}

div.AttachFileWrapper div.NewAttachment div.FileUploadInput {
   padding: 10px;
}

div.AttachFileWrapper div.NewAttachment input.FileUploadButton {
   font-size: 12px;
}

div.AttachFileWrapper div.NewAttachment div.MediaManager {
   border-top: 1px solid #AAAAAA;
   padding: 5px;
}


div.AttachFileWrapper div.FileHolder {
   float: left;
   width: 550px;
   overflow:hidden;
   padding: 5px;
   padding-left: 10px;
   background-color: #e1f0ff;
   border-left: 1px solid #AAAAAA;
}

div.AttachFileWrapper div.FileHolder h3 {
   font-size: 16px;
}

div.AttachFileWrapper div.FileHolder div#FileContainer {

}

div.AttachFileWrapper div.FileHolder div#FileContainer span {
   padding-left: 5px;
}

div.Attachments {
   background-color: #CFECFF;
   padding: 4px;
   margin-bottom: 6px;
   margin-right: 7px;
}

div.Attachments div.AttachmentHeader {
   font-weight: bold;
}

div.Attachments table.AttachFileContainer {
   margin-left: 10px;
   border-collapse: collapse;
   border: none;
}

div.Attachments table.AttachFileContainer tr td {
   padding: 3px;
   vertical-align: middle;
}

li div.FileUploadBlock {
   margin-bottom:       10px;
}

li div.FileUploadBlock h1 {
   margin-bottom:       0px;
}

li div.FileUploadBlock div.Detail {
   font-style:          italic;
}

li table.FileUploadTable th {
   background-color:    white;
}

li table.FileUploadTable td:first-child {
   width:               150px;
}

li table.FileUploadTable td em {
   font-style:          italic;
   font-size:           80%;
}
div.FileAttachment {
   background: url('../images/gear.png') center left no-repeat;
   padding-left: 14px;
}
div.FileOptions,
div.FileName,
div.FileSize {
   display: inline;
   margin-right: 6px;
}
div.UploadProgress {
   display: inline-block;
}

